--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/chinese-beef-dumplings.html">Chinese Beef Dumplings</a>    
-    </body>        
+        <ul>
+        <li><a href="recipes/chinese-beef-dumplings.html">Chinese Beef Dumplings</a></li>    
+        <li><a href="recipes/cooked-lettuce.html">Cooked Lettuce with Oyster Sauce and Garlic</a></li>
+        </ul>
+        </body>        
 </html>
