Added completed third recipe to index.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <ul>
         <li><a href="recipes/chinese-beef-dumplings.html">Chinese Beef Dumplings</a></li>    
         <li><a href="recipes/cooked-lettuce.html">Cooked Lettuce with Oyster Sauce and Garlic</a></li>
-        </ul>
+        <li><a href="recipes/snow-peas.html">Snows Peas with Chinese Sausage</a></li>
+    </ul>
         </body>        
 </html>
